[workspace]
members = [
	"solutions/day01",
	"solutions/day02",
	"solutions/day03",
	"solutions/day04",
	"solutions/day05",
	"solutions/day06",
	"solutions/day07",
	"solutions/day08",
	"solutions/day09",
	"solutions/day10",
	"solutions/day11",
	"solutions/day12",
	"solutions/day13",
	"solutions/day14",
]
